--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -6,6 +6,32 @@ server {
     }
 
     location /media/ {
-        proxy_pass http://host.docker.internal:80/media/;
+        proxy_pass http://host.docker.internal:8081;   # no trailing slash
+        proxy_http_version 1.1;
+        proxy_request_buffering off;                    # important for uploads
+    
+        client_max_body_size 50M;
+    
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+    
+        # OPTIONS preflight
+        if ($request_method = OPTIONS) {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+            add_header 'Access-Control-Max-Age' 1728000 always;
+            add_header 'Content-Length' 0 always;
+            add_header 'Content-Type' 'text/plain; charset=UTF-8' always;
+            return 204;
+        }
+    
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
     }
 }
