--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,6 +3,24 @@ server {
 
     location /api/ {
         proxy_pass http://host.docker.internal:8080/api/;
+        proxy_http_version 1.1;
+
+        # SSE needs to disable buffering
+        proxy_buffering off;
+        proxy_cache off;
+
+        # Prevent Nginx from closing the connection
+        proxy_read_timeout 1h;
+        proxy_send_timeout 1h;
+
+        # SSE-specific headers
+        proxy_set_header Connection '';
+        proxy_set_header Cache-Control 'no-cache';
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /media/ {
