--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "ReVoiceChat-CoreServer"]
 	path = ReVoiceChat-CoreServer
 	url = https://github.com/revoicechat/ReVoiceChat-CoreServer.git
+[submodule "ReVoiceChat-MediaServer"]
+	path = ReVoiceChat-MediaServer
+	url = https://github.com/revoicechat/ReVoiceChat-MediaServer.git
 [submodule "ReVoiceChat-WebClient"]
 	path = ReVoiceChat-WebClient
 	url = https://github.com/revoicechat/ReVoiceChat-WebClient.git
