--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,18 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      '';
+}
+
 server {
     listen 3000;
 
     location /api/ {
         proxy_pass http://host.docker.internal:8080/api/;
         proxy_http_version 1.1;
+
+        # Headers WebSocket
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
 
         # SSE needs to disable buffering
         proxy_buffering off;
