--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "3000:3000"
+      - "${NGINX_PORT:-3000}:3000"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     extra_hosts:
