--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,20 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 3000;
 
+    location / {
+        proxy_pass http://host.docker.internal:5000/
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+        proxy_http_version 1.1;
+    }
+
+    location /admin/ {
+        proxy_pass http://host.docker.internal:5001/
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+        proxy_http_version 1.1;
+    }
+
     location /api/ {
         proxy_pass http://host.docker.internal:8080/api/;
         proxy_http_version 1.1;
@@ -36,9 +50,7 @@ server {
         proxy_pass http://host.docker.internal:8081;
         proxy_http_version 1.1;
         proxy_request_buffering off;
-    
-        client_max_body_size 50M;
-    
+  
         # CORS headers
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
