--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,14 +7,14 @@ server {
     listen 3000;
 
     location / {
-        proxy_pass http://host.docker.internal:5000/
+        proxy_pass http://host.docker.internal:5000/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $http_connection;
         proxy_http_version 1.1;
     }
 
     location /admin/ {
-        proxy_pass http://host.docker.internal:5001/
+        proxy_pass http://host.docker.internal:5001/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $http_connection;
         proxy_http_version 1.1;
